--- a/crud/index.html
+++ b/crud/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="https://github.com/augustoterrera/Image-Proyect/blob/master/Logo/logo-header-enhanced.png?raw=true" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
     href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
@@ -13,7 +13,7 @@
     defer
 ></script>
 
-    <title>Vite + React</title>
+    <title>ᴘʏᴘ sᴇᴠᴇʀᴏ</title>
   </head>
   <body>
     <div id="root"></div>
